--- a/src/SlidesV2/Slides.css
+++ b/src/SlidesV2/Slides.css
@@ -31,6 +31,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  font-size: 2rem;
+  line-height: 2;
 }
 
 .lesson article figure {
@@ -46,4 +48,11 @@
   text-align: center;
   font-size: 3rem;
   padding: 0.5em;
+}
+
+.task-timer {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  font-size: 4rem;
 }
