Add Homework28 to Homepage

--- a/src/app.css
+++ b/src/app.css
@@ -18,3 +18,4 @@
 @import 'Lesson25/Lesson25.css';
 @import 'Katakombi/Katakombi.css';
 @import 'SlidesV2/Slides.css';
+@import 'Homework/Homework.css';
