--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -1,6 +1,13 @@
+#profile-svg-container,
 #profile svg {
   width: 100%;
   height: 100%;
+}
+
+#profile-svg-container:focus {
+  outline: none;
+  border: none;
+  box-shadow: none;
 }
 
 #profile svg text {
