Fix video styles for Lesson

--- a/src/SlidesV2/Slides.css
+++ b/src/SlidesV2/Slides.css
@@ -40,7 +40,8 @@
   text-align: center;
 }
 
-.lesson article figure img {
+.lesson article figure img,
+.lesson article figure video {
   height: 80vh;
 }
 
