--- a/src/Banki/Banki.css
+++ b/src/Banki/Banki.css
@@ -5,13 +5,6 @@
   width: 100%;
 }
 
-@media (min-width: 500px) {
-  #banki .banki-student .student-ava img {
-    width: auto;
-    height: 50vh;
-  }
-}
-
 #zapros-banki-vote {
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
@@ -39,3 +32,15 @@
   justify-content: center;
   font-size: 48px;
 }
+
+@media (min-width: 500px) {
+  #banki .banki-student .student-ava img {
+    width: auto;
+    height: 50vh;
+  }
+
+  #zapros-banki-vote article img {
+    height: 80vh;
+  }
+}
+
