--- a/src/Banki/Banki.css
+++ b/src/Banki/Banki.css
@@ -6,7 +6,7 @@
 }
 
 #zapros-banki-vote {
-  position: absolute;
+  position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   display: flex;
   flex-direction: column;
