--- a/gepard/style.css
+++ b/gepard/style.css
@@ -1,3 +1,13 @@
+/* Клетчатый баг-граунд, смари:
+ * https://stackoverflow.com/a/32861765/1657101
+ */
+body {
+  background-size: 40px 40px;
+  background-image:
+    linear-gradient(to right, grey 1px, transparent 1px),
+    linear-gradient(to bottom, grey 1px, transparent 1px);
+}
+
 body {
   margin: 0;
   padding: 30px;
@@ -25,4 +35,5 @@ body {
   width: 300px;
   height: 400px;
   background: aqua;
+  opacity: 50%;
 }
