--- a/gepard/style.css
+++ b/gepard/style.css
@@ -13,19 +13,15 @@ body {
   padding: 30px;
 }
 
-#graph {
-  position: relative;
-  border: solid red 1px;
-  background: gray;
-}
-
 #bullet {
   position: absolute;
-  top: -30px;
-  left: -30px;
+  top: 0;
+  left: 0;
   background: black;
-  width: 30px;
-  height: 30px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #xuy4ek {
@@ -55,13 +51,20 @@ body {
 #line-x-300 {
   width: 1px;
   height: 100vh;
-  border-left: dashed red 2px;
+  border-left: dashed red 4px;
   bottom: 0;
 }
 
 #line-y-400 {
   height: 1px;
-  border-top: dashed red 2px;
+  border-top: dashed red 4px;
   width: 100vw;
   bottom: 0;
+}
+
+#line-x-300-text, 
+#line-y-400-text {
+  font-size: 24px;
+  font-weight: bold;
+  padding: 16px;
 }
