--- a/src/Katakombi/levels/Level.css
+++ b/src/Katakombi/levels/Level.css
@@ -1,3 +1,16 @@
+.level {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  letter-spacing: 4px;
+  padding: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .status-false {
   color: red;
 }
@@ -17,3 +30,4 @@
 .level.complete {
   opacity: 0;
 }
+
