--- a/gepard/style.css
+++ b/gepard/style.css
@@ -74,3 +74,39 @@ body {
   font-weight: bold;
   padding: 16px;
 }
+
+svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#circle {
+  fill: none;
+  stroke: #0014ff;
+  stroke-width: 2px;
+  stroke-dasharray: 5;
+  stroke-dashoffset: 0;
+  animation: dash 1s infinite linear alternate;
+}
+
+#bullet-trajectory {
+  fill: none;
+  stroke: #0014ff;
+  stroke-width: 2px;
+  stroke-dasharray: 5;
+}
+
+/*
+ * Анимация спижжена:
+ * https://css-tricks.com/almanac/properties/s/stroke-dasharray/
+ **/
+@keyframes dash {
+  to {
+    stroke-dashoffset: 10;
+  }
+}
