Show Online Students in Katakombi :)

--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -20,6 +20,7 @@
 #catacombs .level .bg-img {
 }
 
+#catacombs .bg-img,
 #catacombs .level .bg-img,
 #catacombs .level video {
   position: absolute;
