--- a/src/app.css
+++ b/src/app.css
@@ -20,3 +20,4 @@
 @import 'SlidesV2/Slides.css';
 @import 'Homework/Homework.css';
 @import 'Banki/Banki.css';
+@import 'OnlineStudents/OnlineStudents.css';
