Katakombi: add intro and 1st level video

--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -1,5 +1,14 @@
 @import 'levels/Level.css';
 
+#catacombs #start-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 22;
+  padding : 0.5em;
+}
+
 #catacombs {
 }
 
