Add more to Lesson32 and Homework32
- Add Dimon code review to Homework
- Add pics to Lesson32 :)

--- a/src/SlidesV2/Slides.css
+++ b/src/SlidesV2/Slides.css
@@ -35,6 +35,11 @@
   line-height: 2;
 }
 
+.lesson article p {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
 .lesson article figure {
   width: 100%;
   text-align: center;
