--- a/src/Katakombi/KataHome.css
+++ b/src/Katakombi/KataHome.css
@@ -1,1 +1,16 @@
 @import 'KataRating.css';
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+#kata-home {
+  opacity: 0;
+  animation: fade-in 4s linear forwards;
+  animation-delay: 4s;
+}
