--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -27,7 +27,8 @@
   font-size: 1.5em;
 }
 
-#catacombs .level .bg-img {
+#catacombs .bg-img {
+  z-index: -1;
 }
 
 #catacombs .bg-img,
@@ -38,14 +39,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-#catacombs .level video {
-  z-index: 0;
-}
-
-#catacombs .level video.hide {
-  display: none;
 }
 
 #catacombs * {
