--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -74,3 +74,24 @@
   resize: none;
   padding: 20px;
 }
+
+@keyframes fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.fade-out {
+  animation: fade-in 5s linear reverse backwards!important;
+  animation-delay: 0;
+}
+
+#kata-home {
+  opacity: 0;
+  animation: fade-in 2s linear forwards;
+  animation-delay: 3.5s;
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fade-in 5s forwards;
+}
