--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -68,8 +68,13 @@
     to   { opacity: 1; }
 }
 
+@keyframes fade-out {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
 .fade-out {
-  animation: fade-in 2s linear reverse backwards!important;
+  animation: fade-out 2s linear forwards!important;
   animation-delay: 0;
 }
 
