--- a/src/Katakombi/levels/Level.css
+++ b/src/Katakombi/levels/Level.css
@@ -30,3 +30,20 @@
 .level.complete {
   opacity: 0;
 }
+
+#catacombs .level-text {
+  z-index: 1;
+  position: absolute;
+  bottom: 1em;
+  background: #6cb03a7a;
+  /* animation: level-text-anim 50s infinite; */
+  background: none;
+  color: white;
+  padding: 1em;
+  border-radius: 2em;
+  font-family: 'BLOODYTERROR';
+  font-size: 1.5em;
+  letter-spacing: 7px;
+  line-height: 2;
+}
+
