--- a/src/Katakombi/KataRating.css
+++ b/src/Katakombi/KataRating.css
@@ -7,6 +7,8 @@
 /* grid cells */
 #kata-rating > * {
   height: 50px;
+  width: 50px;
+  overflow: hiddden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,4 +32,30 @@
     border-radius: 7px;
     box-shadow: 0 0 10px #0cff0c,
       0 0 15px #0cff0c;
+}
+
+#kata-rating .student-ava {
+  position: relative;
+}
+
+#kata-rating .student-ava figcaption {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: black;
+  color: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.9rem;
+  line-height: 3;
+  padding: 1rem;
+}
+
+#kata-rating .student-ava:hover figcaption {
+  display: flex;
+  opacity: 1;
 }
