Add bottom bar with back btn to quests page

--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,7 @@
 @import 'Login.css';
 @import 'BottomBar.css';
 @import 'Topbar.css';
+@import 'BackButton.css';
 @import 'typography.css';
 @import 'HomePage/HomePage.css';
 @import 'skills/skills.css';
