--- a/src/app.css
+++ b/src/app.css
@@ -23,3 +23,4 @@
 @import 'Homework/Homework.css';
 @import 'Banki/Banki.css';
 @import 'OnlineStudents/OnlineStudents.css';
+@import 'Vangers/Vangers.css';
