--- a/src/Vangers/Vangers.css
+++ b/src/Vangers/Vangers.css
@@ -1,11 +1,18 @@
 #vangers #message-panel {
   position: absolute;
-  top: 11.5%;
+  top: 11%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #99ae05;
   font-size: 1rem;
-  height: 13%;
+  height: 12%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#vangers #message-panel p {
+  margin: 0;
 }
 
 #vangers #background-img {
@@ -18,4 +25,26 @@
 #vangers #background-img {
   height: 100vh;
   width: 100vw;
+}
+
+#next-step-btn {
+  position: absolute;
+  right: 14%;
+  top: 4%;
+  width: 7%;
+  height: 16%;
+  cursor: pointer;
+}
+
+#prev-step-btn {
+  position: absolute;
+  left: 14%;
+  top: 4%;
+  width: 7%;
+  height: 16%;
+  cursor: pointer;
+}
+
+#vangers code {
+  color: #d16407;
 }
