--- a/src/Vangers/Vangers.css
+++ b/src/Vangers/Vangers.css
@@ -55,14 +55,19 @@
 
 #vangers #video-container {
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 44vw;
+  height: 64vh;
+  overflow: hidden;
   text-align: center;
 }
 
 #vangers #video-container video {
+  top: 50%;
+  left: 50%;
+  position: absolute;
   height: 100vh;
-  opacity: 50%;
+  transform: translate(-50%, -50%);
 }
