Vangers: add intro video and music :)

--- a/src/Vangers/Vangers.css
+++ b/src/Vangers/Vangers.css
@@ -71,3 +71,11 @@
   height: 100vh;
   transform: translate(-50%, -50%);
 }
+
+#vangers #intro-vid {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
+}
