--- a/src/global.css
+++ b/src/global.css
@@ -84,3 +84,24 @@ figure {
 .weed-svg.smoked {
   stroke: #ff8a1d;
 }
+
+@keyframes fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@keyframes fade-out {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+.fade-out {
+  animation: fade-out 2s linear forwards!important;
+  animation-delay: 0;
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fade-in 2s forwards;
+}
+
