Add Homework page

--- a/src/Homework/Homework.css
+++ b/src/Homework/Homework.css
@@ -10,9 +10,9 @@
 }
 
 #homework figure {
-  max-height: initial;
+  text-align: center;
 }
 #homework img {
-  height: initial;
+  max-width: 100%;
 }
 
