--- a/src/app.css
+++ b/src/app.css
@@ -25,3 +25,4 @@
 @import 'OnlineStudents/OnlineStudents.css';
 @import 'OnlineStudents/OnlineLog.css';
 @import 'Vangers/Vangers.css';
+@import 'Chat/Chat.css';
