--- a/src/Chat/Chat.css
+++ b/src/Chat/Chat.css
@@ -9,12 +9,22 @@
 }
 
 #chat .post {
-  display: flex;
+  clear: both;
+}
+
+#chat .message {
+  font-size: 1rem;
 }
 
 #chat .ava {
+  float: left;
   width: 75px;
   height: 75px;
+  margin-right: 0.5rem;
+}
+
+#chat .date {
+  font-size: 0.8rem;
 }
 
 #chat .author {
@@ -24,7 +34,7 @@
 #new-message-form textarea {
   width: 100%;
   margin-bottom: 0.5em;
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 0.5em;
 }
 
