Add Navbar, move some pages out of HomePage

--- a/src/app.css
+++ b/src/app.css
@@ -26,3 +26,5 @@
 @import 'OnlineStudents/OnlineLog.css';
 @import 'Vangers/Vangers.css';
 @import 'Chat/Chat.css';
+@import 'Chat/Chat.css';
+@import 'Navbar/Navbar.css';
