Improve style of home page and OnlineStudents

--- a/src/OnlineStudents/OnlineStudents.css
+++ b/src/OnlineStudents/OnlineStudents.css
@@ -47,4 +47,7 @@
 #online-students .student-ava:hover figcaption {
   display: flex;
   opacity: 1;
+  width: 200px;
+  background: black;
+  font-size: 1rem;
 }
