--- a/src/Vangers/Vangers.css
+++ b/src/Vangers/Vangers.css
@@ -116,3 +116,67 @@ body.vangers-page {
   height: 151px;
   word-break: break-word;
 }
+
+#vangers .chapter-cover {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  background: black;
+}
+
+#vangers .chapter-cover img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#vangers #music-player {
+  position: absolute;
+  bottom: 1em;
+  left: 1em;
+  display: block;
+}
+
+#vangers #music-player #track {
+  font-size: 1rem;
+  font-family: monospace;
+  letter-spacing: 0;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+}
+
+#vangers #music-player #volume {
+  position: static;
+  margin-left: 8px;
+  margin-bottom: 8px;
+}
+
+#vangers #music-player .slider {
+  background: #7c9610;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+#vangers #music-player .slider::-webkit-slider-thumb {
+  width: 15px;
+  height: 15px;
+  background: #a95400;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+#vangers #music-player .slider::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  background: #a95400;
+  cursor: pointer;
+  border-radius: 50%;
+}
