Use reusable Chapter component for Chapter1

--- a/src/Vangers/Vangers.css
+++ b/src/Vangers/Vangers.css
@@ -10,6 +10,7 @@ body.vangers-page {
 
 #vangers #message-panel,
 #vangers #hint {
+  z-index: 1;
   color: #99ae05;
   font-size: 1rem;
   height: 12%;
